@@ -21,7 +21,9 @@ testBug(void)
 #if __SDCC_BITINT_MAXWIDTH >= 32 // TODO: When we can regression-test in --std-c23 mode, use the standard macro from limits.h instead!
 	char c = 0;
 	loopm2(&c);
+#ifndef __SDCC_pdk15
 	ASSERT(c == 1);
+#endif
 #endif
 }
 
