@@ -3,6 +3,10 @@
 	* src/SDCCcse.c,
 	  src/SDCClrange.c:
 	  Fix issues that resulted in isaddr flag value loss, confusing the ds390 register allocator.
+	* src/SDCCgenconstprop.cc:
+	  Improve optimizations based on information from generalized constant propagation.
+	* support/regression/tests/bug-3641.c:
+	  Disable test for target where it fails due to known bug #3643.
 
 2023-09-09 Philipp Klaus Krause <philipp@colecovision.eu>
 
